; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_link_elf.c_link_elf_link_preload_finish.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_link_elf.c_link_elf_link_preload_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_PROT_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @link_elf_link_preload_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @link_elf_link_preload_finish(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @relocate_file(i64 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  %13 = load i32, i32* @VM_PROT_NONE, align 4
  %14 = call i32 @preload_protect(i64 %12, i32 %13)
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %11, %1
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %15
  %19 = load i32, i32* %5, align 4
  store i32 %19, i32* %2, align 4
  br label %25

20:                                               ; preds = %15
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @link_elf_preload_parse_symbols(i64 %21)
  %23 = load i64, i64* %3, align 8
  %24 = call i32 @link_elf_link_common_finish(i64 %23)
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %20, %18
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @relocate_file(i64) #1

declare dso_local i32 @preload_protect(i64, i32) #1

declare dso_local i32 @link_elf_preload_parse_symbols(i64) #1

declare dso_local i32 @link_elf_link_common_finish(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
